fixed tokens/delete
